syntax = "proto3";

package agent_swarm;

message AgentMessage {
    string sender_id = 1;
    int64 timestamp = 2;
    string content = 3;
}